@@ -6,6 +6,7 @@ v 8.5.2
   - Bring the "branded appearance" feature from EE to CE
   - Fix error 500 when commenting on a commit
   - Improve implementation to check read access to forks and add pagination
+  - Don't show any "2FA required" message if it's not actually required
   - Update Rails to 4.2.5.2
 
 v 8.5.1
